[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/UI.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/ui_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/ui/Roboto.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 4 )

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Lobby" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 500, 0 )
alignment = 1

[node name="Label" type="Label" parent="Lobby"]
margin_top = 6.0
margin_right = 512.0
margin_bottom = 35.0
theme = ExtResource( 2 )
text = "DUNGEON RPG"
align = 1

[node name="Host" type="Button" parent="Lobby"]
margin_top = 39.0
margin_right = 512.0
margin_bottom = 89.0
rect_min_size = Vector2( 100, 50 )
theme = ExtResource( 2 )
text = "Host"

[node name="MarginContainer" type="MarginContainer" parent="Lobby"]
margin_top = 93.0
margin_right = 512.0
margin_bottom = 163.0
rect_min_size = Vector2( 0, 70 )

[node name="InputUsername" type="LineEdit" parent="Lobby"]
margin_top = 167.0
margin_right = 512.0
margin_bottom = 201.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
align = 1
placeholder_text = "Username"

[node name="InputIP" type="LineEdit" parent="Lobby"]
margin_top = 205.0
margin_right = 512.0
margin_bottom = 239.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
align = 1
placeholder_text = "IP Address"

[node name="Join" type="Button" parent="Lobby"]
margin_top = 243.0
margin_right = 512.0
margin_bottom = 293.0
rect_min_size = Vector2( 100, 50 )
theme = ExtResource( 2 )
text = "Join"

[connection signal="button_up" from="Lobby/Host" to="." method="_on_Host_button_up"]
[connection signal="button_up" from="Lobby/Join" to="." method="_on_Join_button_up"]
